/*
 * $Id: ChangeLog,v 1.4384 2005/10/01 18:33:01 ronpinkas Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2005-10-01 12:37 UTC-0800 Ron Pinkas <Ron in xHarbour.com>
  * include/hbexprb.c
    * Ommitted in previous commit

2005-10-01 11:30 UTC-0800 Ron Pinkas <Ron in xHarbour.com>
  * include/hbexprb.c
  * include/hbexprop.h
  * include/hbpcode.h
  * source/compiler/genc.c
  * source/compiler/harbour.sly
  * source/compiler/hbfix.c
  * source/compiler/hbpcode.c
  * source/vm/hvm.c
    + Added support for HB_PUSHARRAYREF
  * include/error.ch
    + Added #define EG_ARRREF       52      /* Harbour special */
  + tests/arrbyref.prg
    + New sample of passing array element by ref

2005-10-01 01:43 UTC+0200 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
  * xharbour/include/inkey.ch
    * changed K_MAXMOUSE to 1016 - As I understand it should point to
      maximum inkey() mouse event which is K_NCMOUSEMOVE now

  * xharbour/include/hbapigt.h
  * xharbour/source/rtl/inkey.c
  * xharbour/source/rtl/set.c
    * rewritten inkey functions to fix some differences between Clipper
      It's now shorter more readable and should better play with
      inkey poll checking
    * hb_inkeyReset( BOOL fAllocate ) changed to hb_inkeyReset( void )
    ! fixed EVENTMASK checking - now keys can be filltered properly
      Filtering in low level GT drivers is wrong because hb_gt_ReadKey()
      can be called asynchronously to user INKEY() call and use differ
      mask. I hope this will make GTCRS and GTXWC users happy because
      I didn't want to implement wrong by definition actions in these
      GTs.

  * xharbour/source/vm/asort.c
    * minor modification

  * xharbour/source/vm/itemapi.c
    ! fixed bug reported on harbour-users group in comparison
      empty strings with SET EXACT ON

  * xharbour/include/hbvm.h