@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.4384 2005/10/01 18:33:01 ronpinkas Exp $
+ * $Id: ChangeLog,v 1.4385 2005/10/01 19:37:40 ronpinkas Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,10 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2005-10-01 13:08 UTC-0800 Ron Pinkas <Ron in xHarbour.com>
+  * include/hbexprb.c
+    * Reset of asList.bByRef in code setting HB_ET_ARRAYAT without calling hb_compExprNewArrayAt()
 
 2005-10-01 12:37 UTC-0800 Ron Pinkas <Ron in xHarbour.com>
   * include/hbexprb.c
